Refactor tasks to generate certificates and kubeconfigs.

--- a/roles/k8s_master/defaults/main.yml
+++ b/roles/k8s_master/defaults/main.yml
@@ -1,14 +1,17 @@
-k8s_master__k8s_bins_download_url_base: https://storage.googleapis.com/kubernetes-release/release/{{ k8s__k8s_version }}/bin/linux/amd64
-k8s_master__kube_apiserver_bin_checksum: sha1:cc33fa6ba52aa13ab3e093a9eb4357658591c4b5
-k8s_master__kube_controller_manager_bin_checksum: sha1:3db5b809a9ceedb7176aebe2872d2dd34d85d9e8
-k8s_master__kube_scheduler_bin_checksum: sha1:591ea21d9ea7d98426299c1fcd713a7a56296090
-k8s_master__kubectl_bin_checksum: sha1:76ec5b750a2023f22c0766624189b96c8146bbe5
-k8s_master__kubeadm_bin_checksum: sha1:ebfdb3a8ecf7f161f048703d4328bf81bbdbb323
-
 k8s_master__pki_dir: /etc/kubernetes/pki
 k8s_master__audit_log_dir: /var/log/kubernetes
 k8s_master__kubeconfig_dir: /etc/kubernetes
 k8s_master__k8s_configs_dir: /etc/kubernetes
+
+k8s_master__elliptic_curve_type: secp384r1
+k8s_master__kube_apiserver_server_cert_valid_days: 5475
+k8s_master__kube_apiserver_client_cert_valid_days: 5475
+k8s_master__kube_controller_manager_server_cert_valid_days: 5475
+k8s_master__kube_scheduler_server_cert_valid_days: 5475
+k8s_master__admin_client_cert_valid_days: 5475
+k8s_master__kube_controller_manager_client_cert_valid_days: 5475
+k8s_master__kube_scheduler_client_cert_valid_days: 5475
+k8s_master__front_proxy_client_cert_valid_days: 5475
 
 k8s_master__secret_encoding_key: your_32_bytes_secure_private_key
 
