--- a/roles/etcd/defaults/main.yml
+++ b/roles/etcd/defaults/main.yml
@@ -3,6 +3,9 @@ etcd__etcd_archive_download_url_base: https://github.com/coreos/etcd/releases/do
 etcd__etcd_archive_checksum: sha1:caa0a26490aaa10fa39a011eb21456e7d627220c
 etcd__pki_dir: /etc/kubernetes/pki
 
+etcd__elliptic_curve_type: secp384r1
+etcd__etcd_server_cert_valid_days: 5475
+
 etcd__data_dir: /var/lib/etcd
 etcd__etcd_bin_dir: /usr/bin
 etcd__listen_client_urls: https://{{ host__public_address }}:{{ host__etcd_server_port }},https://127.0.0.1:{{ host__etcd_server_port }}
