--- a/roles/dev_env/tasks/tools_installed.yml
+++ b/roles/dev_env/tasks/tools_installed.yml
@@ -2,12 +2,14 @@
   yum:
     name: '{{ item }}'
     state: latest
+    disablerepo: '{{ dev_env__yum_repos_to_disable | join(",") }}'
   loop: '{{ dev_env__yum_pkgs_to_install }}'
   when: not host__use_dnf
 - name: YUM packages for dev tools are installed
   dnf:
     name: '{{ item }}'
     state: latest
+    disablerepo: '{{ dev_env__yum_repos_to_disable | join(",") }}'
   loop: '{{ dev_env__yum_pkgs_to_install }}'
   when: host__use_dnf
 
