--- a/roles/docker/defaults/main.yml
+++ b/roles/docker/defaults/main.yml
@@ -17,3 +17,5 @@ docker__docker_user: null
 #     name: docker
 #     gid: 54321
 #   user: null
+
+docker__yum_repos_to_disable: '{{ base__yum_repos_to_disable }}'
