--- a/roles/k8s_node/defaults/main.yml
+++ b/roles/k8s_node/defaults/main.yml
@@ -24,6 +24,7 @@ k8s_node__kernel_params:
 - name: vm.max_map_count  # Elasticsearch
   value: 262144
 
+k8s_node__yum_repos_to_disable: '{{ base__yum_repos_to_disable }}'
 k8s_node__yum_install_dependencies: true
 
 k8s_node__runc_bin_dir: /usr/bin
