--- a/roles/k8s_node/defaults/main.yml
+++ b/roles/k8s_node/defaults/main.yml
@@ -28,9 +28,9 @@ k8s_node__yum_repos_to_disable: '{{ base__yum_repos_to_disable }}'
 k8s_node__yum_install_dependencies: true
 
 k8s_node__runc_bin_dir: /usr/bin
-k8s_node__runc_version: v1.0.0-rc10
+k8s_node__runc_version: v1.0.0-rc92
 k8s_node__runc_download_url: https://github.com/opencontainers/runc/releases/download/{{ k8s_node__runc_version }}/runc.amd64
-k8s_node__runc_checksum: sha1:1d000f22ad8a46b15fb57b1da67b156fbbb57527
+k8s_node__runc_checksum: sha1:3f1fcd777fb7b0aaaed5cf4b8aa9016cb72010d6
 
 k8s_node__containerd_bin_dir: /usr/bin
 k8s_node__containerd_conf: /etc/containerd/config.toml
@@ -42,14 +42,14 @@ k8s_node__containerd_disable_tcp_service: 'true'
 k8s_node__containerd_registry_mirrors:
   docker.io:
   - https://registry-1.docker.io
-k8s_node__containerd_version: 1.3.4
-k8s_node__containerd_archive_download_url_base: https://github.com/containerd/containerd/releases/download/v{{ k8s_node__containerd_version }}/containerd-{{ k8s_node__containerd_version }}.linux-amd64.tar.gz
-k8s_node__containerd_archive_checksum: sha1:b1014e859fdab1376df30a1520d1ff964e01292f
+k8s_node__containerd_version: 1.4.3
+k8s_node__containerd_archive_download_url_base: https://github.com/containerd/containerd/releases/download/v{{ k8s_node__containerd_version }}/containerd-{{ k8s_node__containerd_version }}-linux-amd64.tar.gz
+k8s_node__containerd_archive_checksum: sha1:05eb5a76bd9088f240bbfeceacfe5979b82416e4
 k8s_node__containerd_restart_sec: 10
 
-k8s_node__cni_plugins_version: v0.8.5
+k8s_node__cni_plugins_version: v0.9.1
 k8s_node__cni_plugins_archive_download_url_base: https://github.com/containernetworking/plugins/releases/download
-k8s_node__cni_plugins_archive_checksum: sha1:677d218b62c0ef941c1d0b606d6570faa5277ffd
+k8s_node__cni_plugins_archive_checksum: sha1:4a47eea0a27d1b07c90d5d11080d55e13ba76608
 
 k8s_node__kubeconfig_dir: /etc/kubernetes
 k8s_node__k8s_configs_dir: /etc/kubernetes
