--- a/roles/k8s_master/defaults/main.yml
+++ b/roles/k8s_master/defaults/main.yml
@@ -15,6 +15,8 @@ k8s_master__front_proxy_client_cert_valid_days: 5475
 
 k8s_master__secret_encoding_key: your_32_bytes_secure_private_key
 
+k8s_master__kube_apiserver_api_audiences: k8s-api
+k8s_master__kube_apiserver_audit_log_compress: 'true'
 k8s_master__kube_apiserver_audit_log_format: json
 k8s_master__kube_apiserver_audit_log_maxage: 30
 k8s_master__kube_apiserver_audit_log_maxbackup: 3
@@ -31,6 +33,7 @@ k8s_master__kube_apiserver_event_ttl: 1h0m0s
 k8s_master__kube_apiserver_kubelet_preferred_address_types: InternalIP,ExternalIP,Hostname
 k8s_master__kube_apiserver_kubernetes_service_node_port: 0
 k8s_master__kube_apiserver_profiling: 'false'
+k8s_master__kube_apiserver_service_account_issuer: https://k8s-api
 k8s_master__kube_apiserver_service_node_port_range: '30000-32767'
 k8s_master__kube_apiserver_tls_cipher_suites: TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
 k8s_master__kube_apiserver_tls_min_version: VersionTLS12
